--- a/dbc1.html
+++ b/dbc1.html
@@ -2,6 +2,7 @@
 	<html>
 		<head>
 			<title>Kendall Carey</title>
+			<link rel="stylesheet" type="text/css" href="dbc1.css">
 		</head>
 		<body>
 			<h1>Getting to know Kendall Carey</h1>
