added link and css

--- a/dbc1.html
+++ b/dbc1.html
@@ -36,7 +36,7 @@
 			<h6>links<h6>
 				<ul>
 					<li><a href="https://facebook.com/kendall.carey">Facebook</a></li>
-					<li><a href="www.linkedin.com/pub/kendall-carey/5b/804/550/" target="_blank">LinkedIn</a></li>
+					<li><a href="https://linkedin.com/pub/kendall-carey/5b/804/550/" target="_blank">LinkedIn</a></li>
 					<li><a href="mailto:kendall.carey@gmail.com">Email me!</a></li>
 				</ul>
 				
