--- a/dbc1.html
+++ b/dbc1.html
@@ -9,13 +9,13 @@
 				<p>Things you may have wanted to know</p>
 				<a href="https://kendallcarey.co"> <img src="https://scontent-a-sjc.xx.fbcdn.net/hphotos-prn1/t31.0-8/1040779_640838153713_1525796151_o.jpg" width="30%" height="30%" alt="Kendall Purple shirt"/></a>
 			<h2>Currently</h2>
-				<p>Working at the <em>Four Seasons</em> at <strong>MKT</strong></p>
+				<p class="now">Working at the <em>Four Seasons</em> at <strong>MKT</strong></p>
 				<p>feel free to stop by and say hello</p>
 			<h3>Background</h3>
 				<img src="https://scontent-a-sjc.xx.fbcdn.net/hphotos-ash2/t1.0-9/248691_546710551183_3176741_n.jpg"/>
-				<p>Small town girl from Safety Harbor, Florida</p>
-				<p>Lived in NYC and LA before moving to SF last May</P>
-				<p>Was accepted into law school but decided I would rather study at Dev Bootcamp</p>
+				<p id="child">Small town girl from Safety Harbor, Florida</p>
+				<p id="child">Lived in NYC and LA before moving to SF last May</P>
+				<p id="child">Was accepted into law school but decided I would rather study at Dev Bootcamp</p>
 			<h4>San Francisco</h4>
 				<p>I live near Mission Dolores Park</p>
 				<p>Favorite bar is Techo de Lolinda</p>
