--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
 	</head>
 		<body>
 			<h1>Hello DBC!</h1>
+			<a href="https://kendallcarey.github.io/dbc1.html">DBC1</a>
+			<a href="https://kendallcarey.github.io/dbc2.html">DBC2</a>
+			<a href="https://kendallcarey.github.io/wireframe_sites.html">Wireframe Sites</a>
+			<a href="https://kendallcarey.github.io/comparing_websites.html">Comparing Websites</a>
+			<a href="https://kendallcarey.github.io/week2_cultural_blog.html">Cultural Blog</a>
 		</body>
 </html>
