New improved index

--- a/index.html
+++ b/index.html
@@ -2,13 +2,39 @@
 <html>
 	<head>
 		<title>Kendall Carey</title>
+		<link rel="stylesheet" type="text/css" href="dbc2.css">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 		<body>
-			<h1>Hello DBC!</h1>
-			<a href="https://kendallcarey.github.io/unit1_projects/dbc1.html">DBC1</a>
-			<a href="https://kendallcarey.github.io/unit1_projects/dbc2.html">DBC2</a>
-			<a href="https://kendallcarey.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</a>
-			<a href="https://kendallcarey.github.io/unit1_projects/comparing_websites.html">Comparing Websites</a>
-			<a href="https://kendallcarey.github.io/unit1_projects/week2_cultural_blog.html">Cultural Blog</a>
+			<div class="site">
+				<div id="header">
+					<h1>Hello DBC!</h1>
+				</div>
+			<div class="content_area">
+				<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-ash2/t31.0-8/463305_594540699183_1291026395_o.jpg"/>
+				/a>
+		</div>
+			<div id="sidebar">
+				<ul>
+					<li>
+						<a href="https://kendallcarey.github.io/unit1_projects/dbc1.html">DBC1</a>
+					</li>
+					<li>
+						<a href="https://kendallcarey.github.io/unit1_projects/dbc2.html">DBC2</a>
+					</li>
+					<li>
+						<a href="https://kendallcarey.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</a>
+					</li>
+					<li>
+						<a href="https://kendallcarey.github.io/unit1_projects/comparing_websites.html">Comparing Websites</a>
+					</li>
+					<li>
+						<a href="https://kendallcarey.github.io/unit1_projects/week2_cultural_blog.html">Cultural Blog</a>
+					</li>
+			</div>
+
+			<div id="footer">
+				<h2><a href="https://facebook.com/kendall.carey"/>Facebook Me!</a></h2>
+			</div>
 		</body>
-</html> 
+	</html>
