--- a/index.html
+++ b/index.html
@@ -15,22 +15,27 @@
 				/a>
 		</div>
 			<div id="sidebar">
-				<ul>
-					<li>
-						<a href="https://kendallcarey.github.io/unit1_projects/dbc1.html">DBC1</a>
-					</li>
-					<li>
-						<a href="https://kendallcarey.github.io/unit1_projects/dbc2.html">DBC2</a>
-					</li>
-					<li>
-						<a href="https://kendallcarey.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</a>
-					</li>
-					<li>
-						<a href="https://kendallcarey.github.io/unit1_projects/comparing_websites.html">Comparing Websites</a>
-					</li>
-					<li>
-						<a href="https://kendallcarey.github.io/unit1_projects/week2_cultural_blog.html">Cultural Blog</a>
-					</li>
+				<ol>
+					<li>Unit 1 Week 1 projects</li>
+						<ul>
+							<li>
+								<a href="https://kendallcarey.github.io/unit1_projects/dbc1.html">DBC1</a>
+							</li>
+							<li>
+								<a href="https://kendallcarey.github.io/unit1_projects/dbc2.html">DBC2</a>
+							</li>
+							<li>
+								<a href="https://kendallcarey.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</a>
+							</li>
+							<li>
+								<a href="https://kendallcarey.github.io/unit1_projects/comparing_websites.html">Comparing Websites</a>
+							</li>
+							<li>
+								<a href="https://kendallcarey.github.io/unit1_projects/week2_cultural_blog.html">Cultural Blog</a>
+							</li>
+						</ul>
+					<li>Unit 1 Week 2 projects</li>
+				</ol>
 			</div>
 
 			<div id="footer">
