--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html>
 	<head>
 		<title>Kendall Carey</title>
-		<link rel="stylesheet" type="text/css" href="dbc2.css">
+		<link rel="stylesheet" type="text/css" href="index.css">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 		<body>
 			<div class="site">
-				<div id="header">
+				<header>
 					<h1>Hello DBC!</h1>
 				</div>
 				<div class="content_area">
 				<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-ash2/t31.0-8/463305_594540699183_1291026395_o.jpg"/>
-			</div>
+				<caption>"The most beautiful thing we can experience is the mysterious. It is the source of all true art and all science. He to whom this emotion is a stranger, who can no longer pause to wonder and stand rapt in awe, is as good as dead: his eyes are closed." Einstein, Albert in <em>Living Philosophies</em></caption>
+			</header>
 				<div id="sidebar">
 				<ol>
 					<li>Unit 1 Week 1 projects</li>
@@ -37,8 +38,8 @@
 				</ol>
 			</div>
 
-			<div id="footer">
+			<footer>
 				<h2><a href="https://facebook.com/kendall.carey"/>Facebook Me!</a></h2>
-			</div>
+			</footer>
 		</body>
 	</html>
