new paragraph hopefully

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 				</div>
 				<div class="content_area">
 				<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-ash2/t31.0-8/463305_594540699183_1291026395_o.jpg"/>
-				<caption>"The most beautiful thing we can experience is the mysterious. </br>It is the source of all true art and all science. </br>He to whom this emotion is a stranger, who can no longer pause to wonder and stand rapt in awe,</br> is as good as dead: his eyes are closed." Einstein, Albert in <em>Living Philosophies</em></caption>
+				<p><caption>"The most beautiful thing we can experience is the mysterious. </br>It is the source of all true art and all science. </br>He to whom this emotion is a stranger, who can no longer pause to wonder and stand rapt in awe,</br> is as good as dead: his eyes are closed." Einstein, Albert in <em>Living Philosophies</em></caption></p>
 			</header>
 				<div id="sidebar">
 				<ol>
