--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 	</head>
 		<body>
 			<div class="site">
-				<header>
+				<div class="header">
 					<h1>Hello DBC!</h1>
 				</div>
 				<div class="content_area">
 				<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-ash2/t31.0-8/463305_594540699183_1291026395_o.jpg"/>
-				<p><caption>"The most beautiful thing we can experience is the mysterious. </br>It is the source of all true art and all science. </br>He to whom this emotion is a stranger, who can no longer pause to wonder and stand rapt in awe,</br> is as good as dead: his eyes are closed." Einstein, Albert in <em>Living Philosophies</em></caption></p>
-			</header>
+				<caption>"The most beautiful thing we can experience is the mysterious. </br>It is the source of all true art and all science. </br>He to whom this emotion is a stranger, who can no longer pause to wonder and stand rapt in awe,</br> is as good as dead: his eyes are closed." Einstein, Albert in <em>Living Philosophies</em></caption>
+			</div>
 				<div id="sidebar">
 				<ol>
 					<li>Unit 1 Week 1 projects</li>
@@ -37,8 +37,8 @@
 				</ol>
 			</div>
 
-			<footer>
+			<div class="footer">
 				<h2><a href="https://facebook.com/kendall.carey"/>Facebook Me!</a></h2>
-			</footer>
+			</div>
 		</body>
 	</html>
