--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Kendall Carey</title>
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="index.css" media="screen and (max-device-width: 480px)">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 		<body>
