--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 		<title>Kendall Carey</title>
 		<link rel="stylesheet" type="text/css" href="index.css">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
 	</head>
 		<body>
 			<div class="site">
 				<div class="header">
-					<h1>Hello DBC!</h1>
+					<h1>Hello DBC! Welcome to Kendall's Bloggety Blog</h1>
 				</div>
 				<div class="content_area">
 				<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-ash2/t31.0-8/463305_594540699183_1291026395_o.jpg"/>
