--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				</div>
 				<div class="content_area">
 				<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-ash2/t31.0-8/463305_594540699183_1291026395_o.jpg"/>
-				<p>"The most beautiful thing we can experience is the mysterious. </br>It is the source of all true art and all science. </br>He to whom this emotion is a stranger, who can no longer pause to wonder and stand rapt in awe,</br> is as good as dead: his eyes are closed." Einstein, Albert in <em>Living Philosophies</em></p>
+				<p>"The most beautiful thing we can experience is the mysterious. </br>It is the source of all true art and all science. </br>He to whom this emotion is a stranger, who can no longer pause to wonder </br> and stand rapt in awe, is as good as dead: his eyes are closed." Einstein, Albert in <em>Living Philosophies</em></p>
 			</div>
 				<div id="sidebar">
 				<ol>
