--- a/dbc2.html
+++ b/dbc2.html
@@ -3,7 +3,7 @@
 	<html>
 		<head>
 			<title>dbc2</title>
-			<link rel="stylesheet" type="text/css" href="dbc2.css">
+			<link rel="stylesheet" type="text/css" href="dbc2.css" media="screen">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		</head>
 		<body>
