--- a/unit1_projects/dbc2.html
+++ b/unit1_projects/dbc2.html
@@ -1,10 +1,13 @@
+@@ -0,0 +1,27 @@
 <!DOCTYPE html>
 	<html>
 		<head>
 			<title>dbc2</title>
-			<link rel="stylesheet" type="text/css" href="dbc2.css">
+			<link rel="stylesheet" type="text/css" href="dbc2.css" media="screen">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		</head>
 		<body>
+			<div class="site">
 			<div id="header">
 				<h1>Vespa</h1>
 			</div>
@@ -13,6 +16,7 @@
 				<h2>Enjoys the park</h2>
 				<p>Specifically <span class="red">Mission Dolores Park</span></p>
 				<a href="https:facebook.com/kendall.carey">Facebook me!</a>
+			</div>
 			<div id="sidebar">
 
 			</div>
