--- a/unit1_projects/week2_technical.html
+++ b/unit1_projects/week2_technical.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>Kendall Carey</title>
-		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="week2_technical.css">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
 	</head>
