--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 					<li>Unit 1 Week 2 projects</li>
 						<ul>
 							<li><a href="https://kendallcarey.github.io/unit1_projects/week2_technical.html">Blog about Element positioning</a></li>
+							<li><a href="https://scontent-a-lax.xx.fbcdn.net/hphotos-prn2/t1.0-9/1509002_686411733893_2960384484385621733_n.jpg">Website Wireframe</a></li>
 				</ol>
 			</div>
 
