updated list and added peer programming challenge

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 						<ul>
 							<li><a href="https://kendallcarey.github.io/unit1_projects/week2_technical.html">Blog about Element positioning</a></li>
 							<li><a href="https://scontent-a-lax.xx.fbcdn.net/hphotos-prn2/t1.0-9/1509002_686411733893_2960384484385621733_n.jpg">Website Wireframe</a></li>
+							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">Pair Programming Challenge</a></li>
+							<li><a href="https://gist.github.com/kendallcarey/10621479">Gist2</a></li>
 				</ol>
 			</div>
 
