--- a/unit1_projects/index.html
+++ b/unit1_projects/index.html
@@ -13,7 +13,8 @@
 				</header>
 				<div id="sidebar">
 				<ol>
-					<li class="week">Unit 1 Week 1 projects</li>
+					<div id="unit">
+						<li class="week">Week 1 projects</li>
 						<ul>
 							<li>
 								<a href="https://kendallcarey.github.io/unit1_projects/dbc1.html">DBC1</a>
@@ -31,12 +32,16 @@
 								<a href="https://kendallcarey.github.io/unit1_projects/week2_cultural_blog.html">Cultural Blog</a>
 							</li>
 						</ul>
-					<li class="week">Unit 1 Week 2 projects</li>
+					</div>
+					<div id="unit">
+					<li class="week">Week 2 projects</li>
 						<ul>
-							<li><a href="https://kendallcarey.github.io/unit1_projects/week2_technical.html">Blog about Element positioning</a></li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week2_technical.html">Technical Blog</a></li>
 							<li><a href="https://scontent-a-lax.xx.fbcdn.net/hphotos-prn2/t1.0-9/1509002_686411733893_2960384484385621733_n.jpg">Website Wireframe</a></li>
-							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">Pair Programming Challenge</a></li>
+							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">Pair Programming</a></li>
 							<li><a href="https://gist.github.com/kendallcarey/10621479">Gist2</a></li>
+						</ul>
+					</div>
 				</ol>
 			</div>
 			<div class="content_area">
