first attempt at making my index and blog web responsive

--- a/unit1_projects/week2_technical.html
+++ b/unit1_projects/week2_technical.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>Kendall Carey</title>
 		<link rel="stylesheet" type="text/css" href="week2_technical.css">
+		<link rel="stylesheet" type="text/css" href="index.css" media="screen and (max-device-width: 480px)">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
 	</head>
