--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 	<head>
 		<title>Kendall Carey</title>
 		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="index.css" media="screen and (max-device-width: 480px)">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
 	</head>
 		<body>
 			<div class="site">
-				<div class="header">
-					<h1>Hello DBC!  Welcome to <a href="https://kendallcarey.github.io">Kendall's Bloggety Blog</a></h1>
-				</div>
-				<div class="content_area">
-				<img src="https://fbcdn-sphotos-c-a.akamaihd.net/hphotos-ak-ash2/t31.0-8/463305_594540699183_1291026395_o.jpg"/>
-				<p>"The most beautiful thing we can experience is the mysterious. </br>It is the source of all true art and all science. </br>He to whom this emotion is a stranger, who can no longer pause to wonder </br> and stand rapt in awe, is as good as dead: his eyes are closed." </br>Einstein, Albert in <em>Living Philosophies</em></p>
-			</div>
+				<header>
+					<img class="Kendall" src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-frc3/t1.0-9/1607047_678780212523_862054909_n.jpg">
+					<h1>Hello DBC!  </br>Welcome to <a href="https://kendallcarey.github.io">Kendall's Bloggety Blog</a></h1>
+				</header>
 				<div id="sidebar">
 				<ol>
-					<li>Unit 1 Week 1 projects</li>
+					<div id="unit">
+						<li class="week">Week 1 projects</li>
 						<ul>
 							<li>
 								<a href="https://kendallcarey.github.io/unit1_projects/dbc1.html">DBC1</a>
@@ -34,17 +33,29 @@
 								<a href="https://kendallcarey.github.io/unit1_projects/week2_cultural_blog.html">Cultural Blog</a>
 							</li>
 						</ul>
-					<li>Unit 1 Week 2 projects</li>
+					</div>
+					<div id="unit">
+					<li class="week">Week 2 projects</li>
 						<ul>
-							<li><a href="https://kendallcarey.github.io/unit1_projects/week2_technical.html">Blog about Element positioning</a></li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week2_technical.html">Technical Blog</a></li>
 							<li><a href="https://scontent-a-lax.xx.fbcdn.net/hphotos-prn2/t1.0-9/1509002_686411733893_2960384484385621733_n.jpg">Website Wireframe</a></li>
-							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">Pair Programming Challenge</a></li>
+							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">Pair Programming</a></li>
 							<li><a href="https://gist.github.com/kendallcarey/10621479">Gist2</a></li>
+						</ul>
+					</div>
 				</ol>
 			</div>
-
-			<div class="footer">
-				<h2><a href="https://facebook.com/kendall.carey"/>Facebook Me!</a></h2>
+			<div class="content_area">
+				<img src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash2/t1.0-9/577062_607947327193_301449043_n.jpg"/>
+				<p><em>Photo by me!</em></p>
+				<p> </p>
+				<p>"The most beautiful thing we can experience is the mysterious. </br>It is the source of all true art and all science. </br>He to whom this emotion is a stranger, who can no longer pause to wonder </br> and stand rapt in awe, is as good as dead: his eyes are closed." </br>Einstein, Albert in <em>Living Philosophies</em></p>
+				<p></p>
 			</div>
+				
+
+			<footer>
+				<h2><a href="https://facebook.com/kendall.carey"/>Facebook Me!</a></h2>
+			</footer>
 		</body>
 	</html>
