changed height and borders and colors

--- a/index.html
+++ b/index.html
@@ -39,10 +39,14 @@
 						<ul>
 							<li><a href="https://kendallcarey.github.io/unit1_projects/week2_technical.html">Technical Blog</a></li>
 							<li><a href="https://scontent-a-lax.xx.fbcdn.net/hphotos-prn2/t1.0-9/1509002_686411733893_2960384484385621733_n.jpg">Website Wireframe</a></li>
-							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">Pair Programming</a></li>
+							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">GPS</a></li>
 							<li><a href="https://gist.github.com/kendallcarey/10621479">Gist2</a></li>
 						</ul>
 					</div>
+					<div id="unit">
+					<li class="week">Week 3 projects</li>
+					<li>GPS</li>
+					<li>Solo Project</li>
 				</ol>
 			</div>
 			<div class="content_area">
