added more links to tech blog

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 					<li class="week">Week 3 projects</li>
 					<li>GPS</li>
 					<li>Solo Project</li>
+				</div>
 				</ol>
 			</div>
 			<div class="content_area">
