changed div in tech blog

--- a/unit1_projects/week2_technical.html
+++ b/unit1_projects/week2_technical.html
@@ -43,6 +43,7 @@
 							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">Pair Programming Challenge</a></li>
 							<li><a href="https://gist.github.com/kendallcarey/10621479">Gist2</a></li>
 						</ul>
+					</div>
 						<ul>
 							<div id="unit">
 								<li class="week">Week 3 projects</li>
