--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<div class="site">
 				<header>
 					<img class="Kendall" src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-frc3/t1.0-9/1607047_678780212523_862054909_n.jpg">
-					<h1>Hello DBC!  </br>Welcome to <a href="https://kendallcarey.github.io">Kendall's Bloggety Blog</a></h1>
+					<h1>Hello DBC!  </br>Welcome to <span><a href="https://kendallcarey.github.io">Kendall's Bloggety Blog</a></span></h1>
 				</header>
 				<div id="sidebar">
 				<ol>
