--- a/unit1_projects/index.html
+++ b/unit1_projects/index.html
@@ -14,7 +14,7 @@
 				</header>
 				<div id="sidebar">
 				<ol>
-					<div id="unit">
+					<div class="unit">
 						<li class="week">Week 1 projects</li>
 						<ul>
 							<li>
@@ -34,7 +34,7 @@
 							</li>
 						</ul>
 					</div>
-					<div id="unit">
+					<div class="unit">
 					<li class="week">Week 2 projects</li>
 						<ul>
 							<li><a href="https://kendallcarey.github.io/unit1_projects/week2_technical.html">Technical Blog</a></li>
@@ -42,6 +42,12 @@
 							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">Pair Programming</a></li>
 							<li><a href="https://gist.github.com/kendallcarey/10621479">Gist2</a></li>
 						</ul>
+					</div>
+					<div class="unit">
+						<li class="week">Week 3 projects</li>
+						<ul>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html">Technical Blog #2</li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog.html">Cultural Blog</li>
 					</div>
 				</ol>
 			</div>
