updated all pages for week 3

--- a/unit1_projects/week2_cultural_blog.html
+++ b/unit1_projects/week2_cultural_blog.html
@@ -1,10 +1,62 @@
-<!DOCTYPE html>
-	<html>
-		<head>
-			<title>Blog Values</title>
-		</head>
+<html>
+	<head>
+		<title>Kendall Carey</title>
+		<link rel="stylesheet" type="text/css" href="index.css">
+		<link rel="stylesheet" type="text/css" href="index.css" media="screen and (max-device-width: 480px)">
+			<meta name="viewport" content="width=device-width, initial-scale=1.0">
+			<link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
+	</head>
 		<body>
-			<h1>Core Values</h1>
+			<div class="site">
+				<header>
+					<img class="Kendall" src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-frc3/t1.0-9/1607047_678780212523_862054909_n.jpg">
+					<h1>Hello DBC!  </br>Welcome to <span><a href="https://kendallcarey.github.io">Kendall's Bloggety Blog</a></span></h1>
+				</header>
+				<div id="sidebar">
+				<ol>
+					<div id="unit">
+						<li class="week">Week 1 projects</li>
+						<ul>
+							<li>
+								<a href="https://kendallcarey.github.io/unit1_projects/dbc1.html">DBC1</a>
+							</li>
+							<li>
+								<a href="https://kendallcarey.github.io/unit1_projects/dbc2.html">DBC2</a>
+							</li>
+							<li>
+								<a href="https://kendallcarey.github.io/unit1_projects/wireframe_sites.html">Wireframe Sites</a>
+							</li>
+							<li>
+								<a href="https://kendallcarey.github.io/unit1_projects/comparing_websites.html">Comparing Websites</a>
+							</li>
+							<li>
+								<a href="https://kendallcarey.github.io/unit1_projects/week2_cultural_blog.html">Cultural Blog</a>
+							</li>
+						</ul>
+					</div>
+					<div id="unit">
+					<li class="week">Week 2 projects</li>
+						<ul>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week2_technical.html">Technical Blog</a></li>
+							<li><a href="https://scontent-a-lax.xx.fbcdn.net/hphotos-prn2/t1.0-9/1509002_686411733893_2960384484385621733_n.jpg">Website Wireframe</a></li>
+							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">GPS</a></li>
+							<li><a href="https://gist.github.com/kendallcarey/10621479">Gist2</a></li>
+						</ul>
+					</div>
+					<div id="unit">
+					<li class="week">Week 3 projects</li>
+					<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html">Technical Blog</li>
+					<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog">Culture Blog</li>
+				</div>
+				</ol>
+			</div>
+			</div>
+			<div class="content_area">
+				<h1>Core Values</h1>
 			<p>The moments in my life where I have been the happiest or proudest, the following values come to mind: adventure, compassion, courage, and responsibility. The main value that sticks out to me is courage. Courage is work. Not everything that is right is easy. It takes courage to leave home to cities where you know no one. It takes courage to follow dreams. It takes courage to know when its time to move on; to completely change careers. Not everyone has the strength. Some people fall into ruts and need courage to find their way out because its not easy. In general, I try to live up to these values %100. The last topic someone asked my advice on was how to help someone who made mistakes with terrible consequences who couldn't hear advice. I can't help those who refuse to help themselves. It takes courage to ask for help.</p>
+			</div>
+			<footer>
+				<h2><a href="https://facebook.com/kendall.carey"/>Facebook Me!</a></h2>
+			</footer>
 		</body>
 	</html>
