--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 					</div>
 					<div id="unit">
 					<li class="week">Week 3 projects</li>
-					<li>GPS</li>
-					<li>Solo Project</li>
+					<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html">Technical Blog</li>
+					<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog">Culture Blog</li>
 				</div>
 				</ol>
 			</div>
