--- a/unit1_projects/week3_cultural_blog.html
+++ b/unit1_projects/week3_cultural_blog.html
@@ -1,22 +1,21 @@
 <html>
 	<head>
 		<title>Kendall Carey</title>
-		<link rel="stylesheet" type="text/css" href="week2_technical.css">
+		<link rel="stylesheet" type="text/css" href="index.css">
 		<link rel="stylesheet" type="text/css" href="index.css" media="screen and (max-device-width: 480px)">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 			<link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
 	</head>
 		<body>
 			<div class="site">
-			<header>
-				<img class="Kendall" src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-frc3/t1.0-9/1607047_678780212523_862054909_n.jpg">
+				<header>
+					<img class="Kendall" src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-frc3/t1.0-9/1607047_678780212523_862054909_n.jpg">
 					<h1>Hello DBC!  </br>Welcome to <span><a href="https://kendallcarey.github.io">Kendall's Bloggety Blog</a></span></h1>
 				</header>
-				
-					<div id="sidebar">
+				<div id="sidebar">
 				<ol>
 					<div id="unit">
-					<li class="week">Unit 1 Week 1 projects</li>
+						<li class="week">Week 1 projects</li>
 						<ul>
 							<li>
 								<a href="https://kendallcarey.github.io/unit1_projects/dbc1.html">DBC1</a>
@@ -36,21 +35,19 @@
 						</ul>
 					</div>
 					<div id="unit">
-					<li class="week">Unit 1 Week 2 projects</li>
+					<li class="week">Week 2 projects</li>
 						<ul>
-							<li><a href="https://kendallcarey.github.io/unit1_projects/week2_technical.html">Blog about Element positioning</a></li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week2_technical.html">Technical Blog</a></li>
 							<li><a href="https://scontent-a-lax.xx.fbcdn.net/hphotos-prn2/t1.0-9/1509002_686411733893_2960384484385621733_n.jpg">Website Wireframe</a></li>
-							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">Pair Programming Challenge</a></li>
+							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">GPS</a></li>
 							<li><a href="https://gist.github.com/kendallcarey/10621479">Gist2</a></li>
 						</ul>
 					</div>
-						<ul>
-							<div id="unit">
-								<li class="week">Week 3 projects</li>
-								<li>GPS</li>
-								<li>Solo Project</li>
-							</div>
-						</ul>
+					<div id="unit">
+					<li class="week">Week 3 projects</li>
+					<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html">Technical Blog</li>
+					<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog">Culture Blog</li>
+				</div>
 				</ol>
 			</div>
 			</div>
