--- a/unit1_projects/index.html
+++ b/unit1_projects/index.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="index.css">
 		<link rel="stylesheet" type="text/css" href="index.css" media="screen and (max-device-width: 480px)">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
+			<link href='https://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
 	</head>
 		<body>
 			<div class="site">
