--- a/unit1_projects/week3_cultural_blog.html
+++ b/unit1_projects/week3_cultural_blog.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" type="text/css" href="index.css">
 		<link rel="stylesheet" type="text/css" href="index.css" media="screen and (max-device-width: 480px)">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
-			<link href='http://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
+			<link href='https://fonts.googleapis.com/css?family=Allura' rel='stylesheet' type='text/css'>
 	</head>
 		<body>
 			<div class="site">
@@ -14,7 +14,7 @@
 				</header>
 				<div id="sidebar">
 				<ol>
-					<div id="unit">
+					<div class="unit">
 						<li class="week">Week 1 projects</li>
 						<ul>
 							<li>
@@ -34,7 +34,7 @@
 							</li>
 						</ul>
 					</div>
-					<div id="unit">
+					<div class="unit">
 					<li class="week">Week 2 projects</li>
 						<ul>
 							<li><a href="https://kendallcarey.github.io/unit1_projects/week2_technical.html">Technical Blog</a></li>
@@ -43,11 +43,12 @@
 							<li><a href="https://gist.github.com/kendallcarey/10621479">Gist2</a></li>
 						</ul>
 					</div>
-					<div id="unit">
-					<li class="week">Week 3 projects</li>
-					<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html">Technical Blog</li>
-					<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog">Culture Blog</li>
-				</div>
+					<div class="unit">
+						<li class="week">Week 3 projects</li>
+						<ul>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html">Technical Blog #2</a></li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog.html">Cultural Blog</a></li>
+					</div>
 				</ol>
 			</div>
 			</div>
