--- a/unit1_projects/week3_cultural_blog.html
+++ b/unit1_projects/week3_cultural_blog.html
@@ -10,7 +10,7 @@
 			<div class="site">
 				<header>
 					<img class="Kendall" src="https://fbcdn-sphotos-d-a.akamaihd.net/hphotos-ak-frc3/t1.0-9/1607047_678780212523_862054909_n.jpg">
-					<h1>Hello DBC!  </br>Welcome to <span><a href="https://kendallcarey.github.io">Kendall's Bloggety Blog</a></span></h1>
+					<h1>Hello DBC!  </br>Welcome to <a href="https://kendallcarey.github.io">Kendall's Bloggety Blog</a></h1>
 				</header>
 				<div id="sidebar">
 				<ol>
@@ -39,7 +39,7 @@
 						<ul>
 							<li><a href="https://kendallcarey.github.io/unit1_projects/week2_technical.html">Technical Blog</a></li>
 							<li><a href="https://scontent-a-lax.xx.fbcdn.net/hphotos-prn2/t1.0-9/1509002_686411733893_2960384484385621733_n.jpg">Website Wireframe</a></li>
-							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">GPS</a></li>
+							<li><a href="https//kendallcarey.github.io/unit1_projects/Pair_programming_challenge1.html">Pair Programming</a></li>
 							<li><a href="https://gist.github.com/kendallcarey/10621479">Gist2</a></li>
 						</ul>
 					</div>
@@ -50,7 +50,6 @@
 							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog.html">Cultural Blog</a></li>
 					</div>
 				</ol>
-			</div>
 			</div>
 			<div class="content_area">
 				<h1>Pair Programming</h1>
