--- a/unit2_projects/week1_technical_blog.html
+++ b/unit2_projects/week1_technical_blog.html
@@ -46,24 +46,19 @@
 					<div class="unit">
 						<li class="week">Week 3 projects</li>
 						<ul>
-							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html"/>Technical Blog #2</li>
-							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog.html"/>Cultural Blog</li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html">Technical Blog #2</a></li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog.html">Cultural Blog</a></li>
 					</div>
-					<div class="unit">
-						<li class="week">Week 4 projects</li>
-						<ul>
-							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_technical_blog.html"/>Technical Blog #3</li>
 				</ol>
 			</div>
 			<div class="content_area">
-				<img src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash2/t1.0-9/577062_607947327193_301449043_n.jpg"/>
-				<p><em>Photo by me!</em></p>
-				<p> </p>
-				<p>"The most beautiful thing we can experience is the mysterious. </br>It is the source of all true art and all science. </br>He to whom this emotion is a stranger, who can no longer pause to wonder </br> and stand rapt in awe, is as good as dead: his eyes are closed." </br>Einstein, Albert in <em>Living Philosophies</em></p>
-				<p></p>
+				<div class="images"><img src="http://imgs.xkcd.com/comics/sandwich.png"/></div>
+				<p id="center">Welcome back to my technical blog. I missed you too. The topic chosen today (did you pick this?) is the Enumerable Cycle.</p>
+				<p>I know you’re thinking, why would I use the enumerable cycle? Is it useful? What is an enumerable? Enumerable is a fun word to say. Indubitably. Well, I am here to answer all your questions… Well, at least about the enumerable cycle in Ruby anyway. I’m not going to cover the meaning of life in this short tech blog... 42.</p>
+				<p>The enumerable module offers a set of methods search, sort and manipulate arrays and hashes. It simplifies. It makes your code “prettier,” at least most of the time.</p>
+				<p>Now, the enumerable method “cycle” does pretty much what you would expect it to do, it cycles through your array or hash however many times you like or even infinitely. It’s a bit cleaner than using .times. You can use the enumerable cycle (the enumerable cycle is starting to sound like a super hero’s name) with the enumerable #next to retrieve the next element as many times a necessary - which I would like to point out that you CANNOT do with the enumerable#each (unlike each, it returns a fresh enumerator everytime!). Although you can use each and cycle together which is useful if you want to reverse cycle through your collection as there is no reverse cycle enumerable but there is a reverse each enumerable.</p>
+				<p>Well, I hope this was useful and if it wasn’t, I hope you do your research and find an enumerable that will be beneficial for your needs. Until next time!</p>
 			</div>
-				
-
 			<footer>
 				<h2><a href="https://facebook.com/kendall.carey"/>Facebook Me!</a></h2>
 			</footer>
