made changes for future cultural blog

--- a/unit1_projects/index.html
+++ b/unit1_projects/index.html
@@ -53,6 +53,7 @@
 						<li class="week">Week 4 projects</li>
 						<ul>
 							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_technical_blog.html"/>Technical Blog #3</li>
+							<li><a href=""/>Cultural Blog<li>
 				</ol>
 			</div>
 			<div class="content_area">
