changed wrong html site, fixed that

--- a/index.html
+++ b/index.html
@@ -46,9 +46,14 @@
 					<div class="unit">
 						<li class="week">Week 3 projects</li>
 						<ul>
-							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html">Technical Blog #2</a></li>
-							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog.html">Cultural Blog</a></li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html"/>Technical Blog #2</li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog.html"/>Cultural Blog</li>
 					</div>
+					<div class="unit">
+						<li class="week">Week 4 projects</li>
+						<ul>
+							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_technical_blog.html"/>Technical Blog #3</li>
+							<li><a href=""/>Cultural Blog<li>
 				</ol>
 			</div>
 			<div class="content_area">
