--- a/unit2_projects/week1_cultural_blog.html
+++ b/unit2_projects/week1_cultural_blog.html
@@ -68,7 +68,7 @@
 
 <li>Did your actions make the conflict better or worse?</li>
 
-Things were bad for a while. He became suicidal and stalked me a few times a week (driving from LA to SF, not sure how he found me). Luckily, gave up after a month due to health reasons.
+<p>Things were bad for a while. He became suicidal and stalked me a few times a week (driving from LA to SF, not sure how he found me). Luckily, gave up after a month due to health reasons.</p>
 
 <li>If you could go back, what would you do differently, if anything?</li>
 
