--- a/unit2_projects/week1_cultural_blog.html
+++ b/unit2_projects/week1_cultural_blog.html
@@ -52,7 +52,8 @@
 				</ol>
 			</div>
 			<div class="content_area">
-				<h2 id="deep">This emotional conflict blog is about to get deep. You have been warned.</h2>
+				<h2 id="deep">This emotional conflict blog is deep. You have been warned.</h2>
+				<p> </p>
 				<ul>
 					<li>Discuss a time you had an emotional conflict with someone. What was it about? What happened?</li>
 
@@ -68,7 +69,7 @@
 
 <li>Did your actions make the conflict better or worse?</li>
 
-<p>Things were bad for a while. He became suicidal and stalked me a few times a week (driving from LA to SF, not sure how he found me). Luckily, gave up after a month due to health reasons.</p>
+<p>Things were bad for a while. He became suicidal and stalked me a few times a week (not sure how he found me). Luckily, he gave up after a month due to health reasons.</p>
 
 <li>If you could go back, what would you do differently, if anything?</li>
 
