added more to my blog

--- a/unit2_projects/week1_cultural_blog.html
+++ b/unit2_projects/week1_cultural_blog.html
@@ -46,9 +46,14 @@
 					<div class="unit">
 						<li class="week">Week 3 projects</li>
 						<ul>
-							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html">Technical Blog #2</a></li>
-							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog.html">Cultural Blog</a></li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html"/>Technical Blog #2</li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog.html"/>Cultural Blog</li>
 					</div>
+					<div class="unit">
+						<li class="week">Week 4 projects</li>
+						<ul>
+							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_technical_blog.html"/>Technical Blog #3</li>
+							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_cultural_blog.html"/>Cultural Blog</li>
 				</ol>
 			</div>
 			<div class="content_area">
@@ -57,7 +62,7 @@
 				<ul>
 					<li>Discuss a time you had an emotional conflict with someone. What was it about? What happened?</li>
 
-<p>The last time I had emotional conflict with someone was a little over a year ago with my ex-husband. I found out that I had no idea who he was. From there, I learned that I wasn’t as emotionally invested in him as I thought I was.</p>
+<p>The last time I had emotional conflict with someone was a little over a year ago with my now ex-husband. I found out that I had no idea who he was. From there, I learned that I wasn’t as emotionally invested in him as I thought I was.</p>
 
 <li>What was the source of the conflict?</li>
 
@@ -65,19 +70,19 @@
 
 <li>How did you handle that conflict?</li>
 
-<p>I was in shock for a while. I needed to step back, look at my life and see if it was worth salvaging. Eventually, I decided that my marriage was beyond hope but at least I could rescue myself. I tried breaking things off in person but he tried to kill himself. So I escaped. He went to work one day and I packed everything that was absolutely mine into my car (with my little dog) and drove from LA to SF to start over.</p>
+<p>I was in shock for a while. I needed to step back, look at my life and see if my marriage was worth salvaging. Eventually, I decided that my marriage was beyond hope but at least I could rescue myself. I tried breaking things off in person but he became suicidal (you can't argue with someone who is crazy or desperate). So I escaped. He went to work one day and I packed everything that was absolutely mine into my car (with my little dog) and drove from LA to SF to start over. New home, new career, new life.</p>
 
 <li>Did your actions make the conflict better or worse?</li>
 
-<p>Things were bad for a while. He became suicidal and stalked me a few times a week (not sure how he found me). Luckily, he gave up after a month due to health reasons.</p>
+<p>Things were bad for a while. He stalked me for a bit (not sure how he found me), making threats against his life. Luckily, he gave up after a month due to health reasons.</p>
 
 <li>If you could go back, what would you do differently, if anything?</li>
 
-<p>I wouldn’t have taken so much time to plan my exit (which took months). I should have walked out the door the moment I found out he was a fraud.</p>
+<p>I wouldn’t have taken so much time to plan my exit (which took months). I should have walked out the door the moment I found out he was a fraud. I was in denial and afraid of change</p>
 
 <li>What did you learn from this experience?</li>
 
-<p>Always trust your instinct. In my gut, I knew something was off but I ignored it because I was wanted to believe him. If I had trusted him, I wouldn’t have looked for evidence like a lawyer’s daughter.</p>
+<p>Always trust your instinct. In my gut, I knew something was off but I ignored it because I was wanted to believe him. If I had trusted him, I wouldn’t have looked for evidence like a lawyer’s daughter. Also, don't fear change, it is quite exciting!</p>
 </ul>
 			</div>
 			<footer>
