--- a/unit2_projects/week1_cultural_blog.html
+++ b/unit2_projects/week1_cultural_blog.html
@@ -52,8 +52,9 @@
 					<div class="unit">
 						<li class="week">Week 4 projects</li>
 						<ul>
-							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_technical_blog.html"/>Technical Blog #3</li>
-							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_cultural_blog.html"/>Cultural Blog</li>
+							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_technical_blog.html">Technical Blog #3</a></li>
+							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_cultural_blog.html">Cultural Blog</a></li>
+						</ul>
 				</ol>
 			</div>
 			<div class="content_area">
