more minor changes

--- a/unit2_projects/week1_cultural_blog.html
+++ b/unit2_projects/week1_cultural_blog.html
@@ -46,8 +46,8 @@
 					<div class="unit">
 						<li class="week">Week 3 projects</li>
 						<ul>
-							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html"/>Technical Blog #2</li>
-							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog.html"/>Cultural Blog</li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html">Technical Blog #2</a></li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog.html">Cultural Blog</a></li>
 					</div>
 					<div class="unit">
 						<li class="week">Week 4 projects</li>
