--- a/unit2_projects/week1_cultural_blog.html
+++ b/unit2_projects/week1_cultural_blog.html
@@ -58,7 +58,7 @@
 				</ol>
 			</div>
 			<div class="content_area">
-				<h2 id="deep">This emotional conflict blog is deep. You have been warned.</h2>
+				<h2 id="deep">This emotional conflict blog is heavy. You have been warned.</h2>
 				<p> </p>
 				<ul>
 					<li>Discuss a time you had an emotional conflict with someone. What was it about? What happened?</li>
