--- a/unit2_projects/week2_cultural_blog.html
+++ b/unit2_projects/week2_cultural_blog.html
@@ -66,14 +66,10 @@
 				</ol>
 			</div>
 			<div class="content_area">
-				<img src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash2/t1.0-9/577062_607947327193_301449043_n.jpg"/>
-				<p><em>Photo by me!</em></p>
-				<p> </p>
-				<p>"The most beautiful thing we can experience is the mysterious. </br>It is the source of all true art and all science. </br>He to whom this emotion is a stranger, who can no longer pause to wonder </br> and stand rapt in awe, is as good as dead: his eyes are closed." </br>Einstein, Albert in <em>Living Philosophies</em></p>
+				<div class="images"><img src="http://www.califliving.com/title24-energy/images/sanfrancisco.jpg"/></div>
+				<p id="center">Everyone in San Francisco has heard of the protests against the Google bus or how the bar basically verbally attacked the Google employee wearing the Google-glass. It’s really nothing against Google personally but what Google represents in SF. Ever since the bay area became the tech hub (due to big companies wanting to take advantage of the talent and venture capital surrounding the bay), residents have seen a massive rise in price of rents and just general living expenses (side note: in fact, even if you could afford a house mortgage in SF, you have to beat all the other prospective homebuyers and they have all come to the open house with their credit report, down payment, bank statement and references… not that this doesn’t happen while looking to rent because it does). The major tech companies (Google, Facebook, LinkedIn, etc.) have shuttles to attract the serious talent that prefer to live in San Francisco (how can you blame them?). While this may seem like tech companies are completely to blame for the mess, they aren’t… but they aren’t completely innocent either. But lets talk about the poor city planning.  Even though the tech industry was booming, the city never built more apartments across the income range. Approximately 75,000 new residents have moved to San Francisco over the last decade while only 1,500 new housing units have been built each year. There were many plans to increase housing but quite a few were blocked by neighborhood associations stating that the new buildings would ruin the skyline and the cities character. But what the neighborhoods may not have realized is that by blocking the new housing units, they were limiting their availability and therefore increasing the property value. While many of the tech salaries can handle the high prices, others can’t. Yes, the tech companies bring jobs and revenue to SF but they also make it more expensive for the locals. The worry is that diverse culture that San Francisco has always prided itself for may slowly dissipate into a boring, sad, monoculture. One way many companies are fighting this problem is by giving back to the community. Google donated millions so that kids can take the bus for free to school, work or afterschool programs for the next two years. Just a little something to make local parent’s lives easier. Its not going to fix the problem but at least it’s a step in the right direction!</p>
 				<p></p>
 			</div>
-				
-
 			<footer>
 				<h2><a href="https://facebook.com/kendall.carey"/>Facebook Me!</a></h2>
 			</footer>
