--- a/unit1_projects/index.html
+++ b/unit1_projects/index.html
@@ -46,14 +46,23 @@
 					<div class="unit">
 						<li class="week">Week 3 projects</li>
 						<ul>
-							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html"/>Technical Blog #2</li>
-							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog.html"/>Cultural Blog</li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_technical.html">Technical Blog #2</a></li>
+							<li><a href="https://kendallcarey.github.io/unit1_projects/week3_cultural_blog.html">Cultural Blog</a></li>
 					</div>
 					<div class="unit">
 						<li class="week">Week 4 projects</li>
 						<ul>
-							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_technical_blog.html"/>Technical Blog #3</li>
-							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_cultural_blog.html"/>Cultural Blog</li>
+							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_technical_blog.html">Technical Blog #3</a></li>
+							<li><a href="https://kendallcarey.github.io/unit2_projects/week1_cultural_blog.html">Cultural Blog</a></li>
+						</ul>
+					<div class="unit">
+						<li class="week">Week 5 projects</li>
+						<ul>
+							<li><a href="https://kendallcarey.github.io/unit2_projects/week2_technical_blog.html">
+							Technical Blog #4</a></li>
+							<li><a href="https://kendallcarey.github.io/unit2_projects/week2_cultural_blog.html">
+							Cultural Blog</a></li>
+						</ul>
 				</ol>
 			</div>
 			<div class="content_area">
