new cultural blog

--- a/unit1_projects/index.html
+++ b/unit1_projects/index.html
@@ -70,8 +70,16 @@
 								<li><a href="https://kendallcarey.github.io/unit2_projects/week3_cultural_blog.html">Cultural Blog</a></li>
 							</ul>
 						</div>
-				</ol>
-			</div>
+						<div class="unit">
+				<li class="week">Week 7 projects</li>
+				<ul>
+					<li><a href="https://kendallcarey.github.io/unit2_projects/week7_technical_blog.html">Tech blog #5</a></li>
+					<li><a href="https://kendallcarey.github.io/unit2_projects/week7_cultural_blog.html">Cultural Blog</a></li>
+				</ul>
+				</li>
+				</div>
+			</ol>
+		</div>
 			<div class="content_area">
 				<img src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash2/t1.0-9/577062_607947327193_301449043_n.jpg"/>
 				<p><em>Photo by me!</em></p>
