--- a/unit1_projects/blog_template.html
+++ b/unit1_projects/blog_template.html
@@ -63,13 +63,27 @@
 							<li><a href="https://kendallcarey.github.io/unit2_projects/week2_cultural_blog.html">
 							Cultural Blog</a></li>
 						</ul>
-				</ol>
-			</div>
+						<div class="unit">
+							<li class="week">Week 6 projects</li>
+							<ul>
+								<li><a href="https://kendallcarey.github.io/unit2_projects/week3_technical_blog.html">Technical Blog</a></li>
+								<li><a href="https://kendallcarey.github.io/unit2_projects/week3_cultural_blog.html">Cultural Blog</a></li>
+							</ul>
+						</div>
+						<div class="unit">
+				<li class="week">Week 7 projects</li>
+				<ul>
+					<li><a href="https://kendallcarey.github.io/unit2_projects/week7_technical_blog.html">Tech blog #5</a></li>
+					<li><a href="https://kendallcarey.github.io/unit2_projects/week7_cultural_blog.html">Cultural Blog</a></li>
+				</ul>
+				</li>
+				</div>
+			</ol>
+		</div>
 			<div class="content_area">
-				<h2>Functional vs. OOD</h2>
-				<p id="center">With a little experience in both, I decided to do some extra research to give this blog some extra umph! I decided to check out some biased blogs and books for comparison.</p> 
-
-<p>Sandi Metz starts off her wonderful book Practical Object-Oriented Design in Ruby stating that the world is procedural. Your day is procedural; beginning with waking up, you typically do things in a certain order (for instance, you definitely get dressed before you to work). She also states Object-Oriented software views the world as object-oriented. You interact with objects all day long that come with their own behaviors and characteristics. Sometimes the behaviors are predictable and sometimes they aren’t. Life is a series of spontaneous interactions between objects but object-oriented design teaches you to thinking of everything as messages that pass through objects instead of an assortment of predefined procedures. The way she describes it, Object-oriented design just sounds a lot more organized and at the same time less controlled. 
+				<h2>Looking back</h2>
+<p id="center">The first week’s blog, I discussed my four of my values and the main one I wanted to talk about was courage. Last week, my blog was about stereotype threat and I talked about my fears as a female coder in training. I believe it takes courage to work past stereotype threat and do your best in a career field where many have low expectations for you or even expect failure. Its hard to overcome the negative thoughts in your head telling you that most people won’t expect you to make it in web dev. I keep reminding myself how much I want this and that success will be that much sweeter.</p>
+<p id="center"> I was just talking to some male software engineers about Dev Bootcamp and what we were studying. One of the guys said that he had wished he had taken a different career path and the other guy shushed him saying, “Don’t scare away the only girl who wants to be a web developer!” I know the other girls in my cohort have probably heard similar jokes. In case any of the women in our cohort had any doubts and needed encouragement: Girls, we got this! And contrary to popular stereotype, we are not alone.
 </p>
 			</div>
 			<footer>
